# polyfit

./: .gitignore  README.md  data.txt  pyproject.toml
.github/workflows/: ci.yml  publish-pypi-release.yml
src/fy_polyfit/: data.txt  polyfit.py
tests/: test_polyfit.py
