[build-system]
requires = ["hatchling","hatch-vcs"]
build-backend = "hatchling.build"

[project]
description = "polyfit data use linear and Quadratic"
name = "fy-polyfit"
dynamic = ["version"]
authors = [
  {name = "fengyang", email = "yfeng880@163.com"}
]
dependencies = [
  "numpy",
  "matplotlib",
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: MIT License",
  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3.8",
]
[tool.hatch.version]
# path = "src/fy_polyfit/polyfit.py"
source = "vcs"


[project.scripts]
polyfit = "fy_polyfit.polyfit:main"

[project.urls]
Documentation = "https://readthedocs.org"
Repository = "https://github.com/archeno/polyfit"
Issues = "https://github.com/archeno/polyfit/issues"
Changelog = "https://github.com/archeno/polyfit/commits/v1.1.0"